solved a bug iin responsivenedd in a simple website  2 and make thea simple website 3 color suitable for non dark mode

--- a/CSS/CSS Projects/Website Projects/A Simple Website 2/hello.css
+++ b/CSS/CSS Projects/Website Projects/A Simple Website 2/hello.css
@@ -32,7 +32,7 @@
         position: absolute;
         right: 200px;
         bottom: 0;
-        width: 480px;
+        width: 25vw;
     }
     
     .nv {
